[gd_scene load_steps=24 format=3 uid="uid://clqxa3jandqww"]

[ext_resource type="Script" path="res://Enemy/Imp.gd" id="1_gjxdk"]
[ext_resource type="Script" path="res://Component/HitBoxComponent.gd" id="2_7sv87"]
[ext_resource type="Texture2D" uid="uid://dtj0msbib567x" path="res://Assets/0x72_DungeonTilesetII_v1.6.png" id="2_67uxi"]
[ext_resource type="Script" path="res://Component/PathfindingComponent.gd" id="3_4ldao"]
[ext_resource type="Script" path="res://Component/HealthComponent.gd" id="3_reelf"]
[ext_resource type="Texture2D" uid="uid://b2xxl5rs2ijik" path="res://Assets/progress_outline.png" id="3_xvork"]
[ext_resource type="Script" path="res://Component/VelocityComponent.gd" id="5_lwvjn"]
[ext_resource type="Script" path="res://Component/DamageComponent.gd" id="8_0mdne"]
[ext_resource type="Script" path="res://Component/HealthBarComponent.gd" id="8_vsujh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xj0l"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0qby"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3kp21"]
radius = 128.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e4km6"]
atlas = ExtResource("2_67uxi")
region = Rect2(368, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t724"]
atlas = ExtResource("2_67uxi")
region = Rect2(384, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqrcg"]
atlas = ExtResource("2_67uxi")
region = Rect2(400, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tdgp"]
atlas = ExtResource("2_67uxi")
region = Rect2(416, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11o3t"]
atlas = ExtResource("2_67uxi")
region = Rect2(432, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_detr0"]
atlas = ExtResource("2_67uxi")
region = Rect2(448, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1uy4"]
atlas = ExtResource("2_67uxi")
region = Rect2(464, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0od4d"]
atlas = ExtResource("2_67uxi")
region = Rect2(480, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d8fny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4km6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t724")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqrcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tdgp")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11o3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1uy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0od4d")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_4t4od"]
colors = PackedColorArray(0.870588, 0, 0, 1, 0.870588, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oo7tf"]
gradient = SubResource("Gradient_4t4od")
width = 14
height = 2

[node name="Imp" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_gjxdk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7xj0l")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_reelf")
max_health = 5

[node name="DamageComponent" type="Node" parent="."]
script = ExtResource("8_0mdne")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("5_lwvjn")
speed = 48

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 32
script = ExtResource("2_7sv87")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("RectangleShape2D_t0qby")

[node name="PathfindingComponent" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("velocity_component")]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
radius = 8.0
script = ExtResource("3_4ldao")
velocity_component = NodePath("../VelocityComponent")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_3kp21")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_d8fny")
animation = &"idle"

[node name="HealthBarComponent" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_component")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = ExtResource("3_xvork")
texture_progress = SubResource("GradientTexture2D_oo7tf")
texture_progress_offset = Vector2(1, 1)
script = ExtResource("8_vsujh")
health_component = NodePath("../HealthComponent")
